--- a/index.html
+++ b/index.html
@@ -40,10 +40,28 @@
     <div class="title">Engine Showcase</div>
     <div class="container">
 
-        <!-- FEATURED VIDEO -->
-        <iframe width="100%" height="480"
-        src="https://www.youtube.com/embed/IyzSeG3ljK0"
-        allowfullscreen></iframe>
+<div class="hero-gallery">
+
+    <div class="hero-track">
+        <img src="images/Screenshot (2).png" alt="">
+        <img src="images/Screenshot (3).png" alt="">
+        <img src="images/Screenshot (4).png" alt="">
+    </div>
+
+</div>
+
+<!-- Controls BELOW image -->
+<div class="hero-controls">
+    <button class="hero-nav prev">&#10094;</button>
+
+    <div class="hero-dots">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+    <button class="hero-nav next">&#10095;</button>
+</div>
 
         <p class="style1" style="margin-top: 1.5em;">
             Gameplay Programmer with a strong focus on C++ systems,
