--- a/project-multiplayer.html
+++ b/project-multiplayer.html
@@ -228,7 +228,7 @@
 
         <div style="margin-top: 2rem; text-align: center;">
             <a href="project_GLSL.html" class="button primary">
-                Engine Project →
+                Engines Project →
             </a>
         </div>
 
