--- a/project_GLSL.html
+++ b/project_GLSL.html
@@ -179,7 +179,7 @@
 
         <div style="margin-top: 2rem; text-align: center;">
             <a href="project-ex.html" class="button primary">
-                Engine Project →
+                OpenSource Engine →
             </a>
         </div>
     </div>
