--- a/project-ex.html
+++ b/project-ex.html
@@ -56,8 +56,8 @@
             <li>Forward shading rendering pipeline</li>
         </ul>
 
-        <div style="margin-top: 1.5rem;">
-            <a href="https://github.com/yourusername/Project_EX"
+        <div style="margin-top: 1.5rem; text-align: center;">
+            <a href="https://github.com/ShanuPatel/Project_EX"
                target="_blank"
                class="button primary">
                 View on GitHub →
