--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <nav id="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="project-ex.html">Engine</a></li>
+            <li><a href="project_GLSL.html">Engine</a></li>
         </ul>
     </nav>
 </section>
